<resources>
    <string name="app_name">Easy Clean</string>
    <string name="font_name_SFUIDisplay_Light">SFUIDisplay_Light</string>
    <string name="font_name_SFUIDisplay_Medium">SFUIDisplay_Medium</string>
    <string name="font_name_SFUIDisplay_Bold">SFUIDisplay_Bold</string>
    <string name="font_name_SFUIDisplay_Regular">SFUIDisplay_Regular</string>

    <string name="font_name_Cairo_Black">Cairo-Black</string>
    <string name="font_name_Cairo_Bold">Cairo-Bold</string>
    <string name="font_name_Cairo_ExtraLight">Cairo-ExtraLight</string>
    <string name="font_name_Cairo_Light">Cairo-Light</string>
    <string name="font_name_Cairo_Regular">Cairo-Regular</string>
    <string name="font_name_Cairo_SemiBold">Cairo-SemiBold</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_tab">Home</string>

    <string name="tap_to_reload">Tap to reload</string>
    <string name="what_rong">Something went wrong</string>
    <string name="minimum_charge">الحد الأدنى للطلب</string>
    <string name="unit">ج</string>
    <string name="error_msg_unknown">Unknown error</string>
    <string name="order_type">نوع الطلب</string>
    <string name="pricing">الأسعار</string>
    <string name="info">معلومات</string>
    <string name="comments">التعليقات</string>
    <string name="delivary_price">رسم التوصيل</string>
    <string name="normal_service">خدمة عادية</string>
    <string name="fast_service">خدمة سريعة</string>
    <string name="btn_retry">حاول مرة أخرى</string>
    <string name="error_msg">خطأ في الإتصال</string>
    <string name="error_msg_no_internet">تأكد من اتصالك بالشبكة</string>
    <string name="sign_up">تسجيل جديد</string>
    <string name="login">تسجيل الدخول</string>
    <string name="login_with_twitter">تسجيل الدخول عن طريق Twitter</string>
    <string name="login_with_google">تسجيل الدخول عن طريق Google</string>
    <string name="login_with_facebook">تسجيل الدخول عن طريق Facebook</string>
    <string name="fields_empty">برجاء ملأ الخقول الفارغة</string>
    <string name="email_not_valid">برجاء إدخال البريد الإلكتروني بصيغة صحيحة</string>
    <string name="password_not_match">كلمة المرور غير متطابقة</string>
    <string name="choose_destrict">برجاء تحديد المنطقة</string>
    <string name="password_sent">تم إرسال كلمة المرور إلى بريدك الإلكتروني</string>
    <string name="not_found">عفوا هذا الحساب غير مسجل لدينا</string>
    <string name="facebook_app_id">1206857946122875</string>
    <string name="fb_login_protocol_scheme">fb1206857946122875</string>




    <string-array name="admin_area">
        <item>اختر المدينة</item>
    </string-array>

    <string-array name="destrict_area">
        <item>اختر المنطقة</item>
    </string-array>


    <string-array name="week_days_work">
        <item>يوم</item>
        <item>السبت</item>
        <item>الأحد</item>
        <item>الإثنين</item>
        <item>الثلاثاء</item>
        <item>الأربعاء</item>
        <item>الخميس</item>
        <item>الجمعة</item>
    </string-array>

    <string-array name="week_days_finish">
        <item>استلام</item>
        <item>السبت</item>
        <item>الأحد</item>
        <item>الإثنين</item>
        <item>الثلاثاء</item>
        <item>الأربعاء</item>
        <item>الخميس</item>
        <item>الجمعة</item>
    </string-array>

    <string-array name="week_days_delivery">
        <item>توصيل</item>
        <item>السبت</item>
        <item>الأحد</item>
        <item>الإثنين</item>
        <item>الثلاثاء</item>
        <item>الأربعاء</item>
        <item>الخميس</item>
        <item>الجمعة</item>
    </string-array>

</resources>
