<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/error_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="#63ccca"
        app:cardCornerRadius="0dp"
        android:visibility="visible"
        >
        <LinearLayout
            android:id="@+id/lout_main_deal_error_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="#63ccca"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            >




            <com.ibtikar.app.easyclean.ui_utilities.CustomFontTextView
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/error_msg"
                android:textColor="@color/white"
                app:custom_font="@string/font_name_Cairo_Regular" />

            <com.ibtikar.app.easyclean.ui_utilities.CustomFontTextView
                android:id="@+id/tv_main_deal_error_txt_cause"
                style="@style/TextAppearance.AppCompat.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:textColor="@color/gray_blue"
                app:custom_font="@string/font_name_Cairo_SemiBold"
                tools:text="مشكلة في الشبكة لديك أو خطأ في السيرفر" />

            <Button
                android:id="@+id/error_btn_retry"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/btn_retry"
                android:textColor="@color/white" />
        </LinearLayout>

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/main_progress"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:src="@drawable/washing"
            android:layout_gravity="center"
            />


    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>