<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lout_container"
    android:layout_width="match_parent" android:layout_height="200dp"
    android:layout_margin="8dp"
    >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="4dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="@color/colorMain"
            app:cardElevation="3dp"
            app:layout_constraintBottom_toBottomOf="@+id/im_main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/space"
            app:layout_constraintTop_toTopOf="@+id/im_main">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingEnd="8dp"
                android:paddingRight="8dp"
                android:paddingTop="4dp"

                android:paddingStart="16dp">

                <com.ibtikar.app.easyclean.ui_utilities.CustomFontTextView
                    android:id="@+id/tv_cleaner_item_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textSize="18sp"
                    android:text="أليجانس دراي كلين"
                    app:custom_font="@string/font_name_Cairo_SemiBold"
                    android:textColor="@color/white"
                    />

                <com.ibtikar.app.easyclean.ui_utilities.CustomFontTextView
                    android:id="@+id/tv_cleaner_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-8dp"
                    app:custom_font="@string/font_name_Cairo_Regular"
                    android:textSize="12sp"
                    tools:text="مغسلة"
                    android:textColor="@color/white"
                    />

                <ImageView
                    android:id="@+id/im_stars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/star1"
                    />

                <com.ibtikar.app.easyclean.ui_utilities.CustomFontTextView
                    android:id="@+id/tv_minimum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    tools:text="الحد الأدنى للطلب 50 ج"
                    android:textSize="12sp"
                    app:custom_font="@string/font_name_Cairo_Light"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    >
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="65dp"
                        android:layout_weight="1"
                        android:layout_marginStart="4dp"
                        android:layout_marginLeft="4dp"
                        android:orientation="vertical"
                        >
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:orientation="horizontal"
                            >
                            <ImageView
                                android:id="@+id/im_visa"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/visa"
                                />
                            <ImageView
                                android:id="@+id/im_master_card"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="4dp"
                                android:layout_marginLeft="4dp"
                                android:src="@drawable/mastercard"
                                />

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            >
                            <ImageView
                                android:id="@+id/im_delivery"
                                android:layout_width="wrap_content"
                                android:layout_height="25dp"
                                android:src="@drawable/delivery"
                                />
                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_marginStart="4dp"
                                android:layout_marginLeft="4dp"
                                />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>


        <ImageView
            android:id="@+id/placeHolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="8dp"
            android:alpha="0.6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/place_holder_small" />


        <ImageView
            android:id="@+id/im_main"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
             />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <Space
            android:id="@+id/space"
            android:layout_width="25dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>